# PWPlab1

./: README.md
src/: CMakeLists.txt  main.cpp
src/trygonometria/: trygonometria.cpp  trygonometria.h
